# image_matcher

./: .gitignore  CMakeLists.txt  ImageMatcher.qrc  README.md  ToDo_ImageMatcher_plugin.txt  draft_model.xml  draft_plugin_ImageMatcher.ini
headers/: ImageMatcherToolBoxWidget.hpp  ImageMatcherWidgetModel.hpp  cmd_image_matcher.hpp  facialRecognition.hpp  image_matcher_constants.hpp  mangaFanartPurger.hpp  matcher.hpp  robustMatcher.hpp
src/: ImageMatcherToolBoxWidget.cpp  ImageMatcherWidgetModel.cpp  cmd_image_matcher.cpp  matcher.cpp  robustMatcher.cpp
ui/: ImageMatcherToolBoxWidget.ui  draft_ImageMatcher.ui
